-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7, 8, 11, 16, 17
-
Component/s: hotspot
-
b21
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8267025 | 16u-cpu | Martin Doerr | P3 | Resolved | Fixed | master |
| JDK-8266656 | 16.0.2 | Martin Doerr | P3 | Resolved | Fixed | b04 |
| JDK-8267360 | 11.0.13-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8268891 | 11.0.13 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
assert root method not found in witnessed_reabstraction_in_supers is too strong, so removing it.
- backported by
-
JDK-8266656 assert root method not found in witnessed_reabstraction_in_supers is too strong
-
- Resolved
-
-
JDK-8267025 assert root method not found in witnessed_reabstraction_in_supers is too strong
-
- Resolved
-
-
JDK-8267360 assert root method not found in witnessed_reabstraction_in_supers is too strong
-
- Resolved
-
-
JDK-8268891 assert root method not found in witnessed_reabstraction_in_supers is too strong
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/9638c412
-
Commit
openjdk/jdk16u/8714642b
-
Commit
openjdk/jdk/49d04586
-
Review
openjdk/jdk11u-dev/35
-
Review
openjdk/jdk16u/112
-
Review
openjdk/jdk/3793