8266288: assert root method not found in witnessed_reabstraction_in_supers is too strong

Backport-of: 49d04586ed27fc905083d60aa68793d84824c7f3